Configuração de autenticação

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
     <h1 class="text-center">Ecommerce Lite</h1>
 
-    <h2 class="text-center">Produtos</h2>
+    <h2 class="text-center"><a asp-action="Index" asp-controller="Product">Produtos</a></h2>
     <div class="d-flex flex-wrap justify-content-center mt-4">
         @foreach (Product product in Model)
         {
