--- a/Views/Order/MyOrders.cshtml
+++ b/Views/Order/MyOrders.cshtml
@@ -6,6 +6,7 @@
 
 <div class="container">
     <h1 class="text-center">Meus Pedidos</h1>
+    @if(Model.Any()){
     <table class="table">
         <thead>
             <tr>
@@ -41,5 +42,10 @@
                 </tr>
             }
         </tbody>
-    </table>
+        </table>
+    }
+    else
+    {
+        <div class="text-center">Nenhum pedido encontrado!</div>
+    }
 </div>
