--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container">
-    <h1 class="text-center">@ViewData["Title"]</h1>
+    <h1 class="text-center text-purple">@ViewData["Title"]</h1>
     <div class="mt-4">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut lectus semper, mollis eros quis, varius magna. Sed ac sodales massa, nec facilisis magna. Praesent cursus fermentum venenatis. Cras fringilla blandit nibh, a varius est molestie et. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed leo neque, venenatis vel ante non, sagittis eleifend odio. Fusce pharetra, libero sed pretium ornare, odio nulla convallis nibh, ultrices semper orci justo ac orci.</p>
 
