--- a/Views/Order/MyOrders.cshtml
+++ b/Views/Order/MyOrders.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <h1 class="text-center">Meus Pedidos</h1>
+    <h1 class="text-center text-purple">Meus Pedidos</h1>
     @if(Model.Any()){
     <table class="table">
         <thead>
