--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,9 +20,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar bg-blue navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container justify-content-between">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">IQVIA - Teste Técnico</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="background: #0c7bc0">                    
+                    <img src="~/img/iqvia-logo-white.svg" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Teste_Técnico - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a>
+            &copy; 2024 - IQVIA - Teste Técnico - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de Privacidade</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
