--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,25 +6,10 @@
 
 <div class="container">
 
-    <h1 class="text-center">Ecommerce Lite</h1>
-
-    <h2 class="text-center"><a asp-action="Index" asp-controller="Product">Produtos</a></h2>
-    <div class="d-flex flex-wrap justify-content-center mt-4">
-        @foreach (Product product in Model)
-        {
-            <div class="text-center p-2" style="flex-basis: 25%">
-                <div class="card p-4">
-                    <a asp-controller="Product" asp-action="Details" asp-route-id="@product.Id" class="text-decoration-none text-reset">
-                        <img src="https://via.placeholder.com/200x200" class="card-img-top" />
-                        <h3 class="card-title mt-3">
-                            @product.Name
-                        </h3>
-                        <div class="card-body">
-                            R$ @product.Price
-                        </div>
-                    </a>
-                </div>
-            </div>
-        }
+    <h1 class="text-center text-purple">Ecommerce Lite</h1>
+           
+    <partial name="ProductsList" model="Model">   
+    <div class="text-center mt-4">
+        <a asp-action="Index" asp-controller="Product" class="bg-blue text-light p-3 rounded-pill d-inline-block text-decoration-none">Ver Mais</a>
     </div>
 </div>
