--- a/Views/Order/Cart.cshtml
+++ b/Views/Order/Cart.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <h1 class="text-center">@ViewData["Title"]</h1>
+    <h1 class="text-center text-purple">@ViewData["Title"]</h1>
     <table class="table mt-4">
         <thead>
             <tr>
